<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">assignment1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Welcome">"Guess  Random Number App "</string>
    <string name="Start">start your game</string>
    <string name="yourNom">"Type Your Guessing number here : "</string>
    <string name="Nom">""type here"</string>
    <string name="Check">Check</string>

</resources>
